--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Excursions</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/resources/css/index.css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download excursion</a>
-    <img src="" alt="">
-    <h2></h2>
-    <p></p>
-    <img src="" alt="">
-    <img src="" alt="">
-    <h2></h2>
-    <a href="#"></a>
-    <p></p>
+    <p><a href="#">Download excursion  (Coming Soon!)</a></p>
+    <video src="resources\videos\excursion.mp4" autoplay poster="">
+
+    </video>
+    <h1>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p><img src="resources\images\camp.jpg" alt=""></p>
+    <p><img src="resources\images\phone.png" alt=""></p>
+    <h1>Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download excursion (Coming soon!)</a></p>
+    <p>©Excursion</p>
   </body>
 </html>
