--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Excursions</title>
-    <link rel="stylesheet" href="/resources/css/index.css">
+    <link rel="stylesheet" href="resources\css\index.css">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download excursion  (Coming Soon!)</a></p>
+    <p><a class="links" href="#">Download excursion  (Coming Soon!)</a></p>
     <video src="resources\videos\excursion.mp4" autoplay poster="">
 
     </video>
@@ -16,7 +16,7 @@
     <p><img src="resources\images\camp.jpg" alt=""></p>
     <p><img src="resources\images\phone.png" alt=""></p>
     <h1>Coming Soon for iPhone and Android</h2>
-    <p><a href="#">Download excursion (Coming soon!)</a></p>
-    <p>©Excursion</p>
+    <p><a class="links" href="#">Download excursion (Coming soon!)</a></p>
+    <p class="footnote">© Excursion</p>
   </body>
 </html>
